<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_900"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                style="@style/currentsongTextViews"
                android:layout_marginTop="16dp"
                android:text="@string/playing"
                android:textColor="@color/blue_A400"
                android:textSize="16sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/tv_song_name"
                style="@style/currentsongTextViews"
                android:layout_marginTop="16dp"
                android:text="@string/song_name"
                android:textAllCaps="true"
                android:textColor="@color/grey_200"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_song_artist"
                style="@style/currentsongTextViews"
                android:layout_marginTop="2dp"
                android:text="@string/song_artist"
                android:textColor="@color/grey_200"
                android:textSize="14sp" />

            <ImageView
                android:id="@+id/iv_song_cover"
                android:layout_width="320dp"
                android:layout_height="320dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp" />

            <Button
                android:id="@+id/bv_play_button"
                style="@style/ButtonViews"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/play"/>

            <TextView
                android:id="@+id/tv_about_song"
                style="@style/currentsongTextViews"
                android:text="@string/about_song"
                android:background="@drawable/about_song_tv_bg"
                android:textColor="@color/blue_500"/>

        </LinearLayout>

    </ScrollView>

    <TextView
        android:id="@+id/tv_go_to_songs_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@color/grey_800"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/goto_songs_list"
        android:textAllCaps="true"
        android:textColor="@color/green_A700"
        android:textSize="24sp"
        android:textStyle="italic" />
</LinearLayout>